# Pre-defined_Secret_Sharing

./: .gitignore  CMakeLists.txt  README.md  bignum.cpp  bignum.h  client_config  consoleLog.cpp  consoleLog.h  main.cpp  parameters.cpp  parameters.h  resolver.cpp  resolver.h  server_config
bignum/: bignum.cpp  bignum.h
configs/: client_config  dealer  secretRecoverer1  secretRecoverer2  secretSharer1  server_config
cryptography/: cryptoUtilities.cpp  cryptoUtilities.h  polynomial.cpp  polynomial.h
dependencies/include/google/protobuf/: map.h  message.h  parse_context.h
dependencies/lib/: gmp.lib  gmpxx.lib
networking/: NetworkMessage.pb.cc  NetworkMessage.pb.h  listener.cpp  listener.h  networkMessage.pb.cc  networkMessage.pb.h  parameters.h  socketEvents.cpp  socketEvents.h  socketHandle.cpp  socketHandle.h
protoc/: NetworkMessage.proto  proto_compile.sh
